--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="grid">
-        <!-- <img src="images/22l.jpg" class="box box1" alt="Sample Photo">
+        <img src="images/22l.jpg" class="box box1" alt="Sample Photo">
         <img src="images/23l.jpg" class="box box2" alt="Sample Photo">
         <img src="images/24m.jpg" class="box box3" alt="Sample Photo">
         <img src="images/6m.jpg" class="box box4" alt="Sample Photo">
@@ -18,17 +18,17 @@
         <img src="images/15m.jpg" class="box box7" alt="Sample Photo">
         <img src="images/27m.jpg" class="box box8" alt="Sample Photo">
         <img src="images/28m.jpg" class="box box9" alt="Sample Photo">
-        <img src="images/26m.jpg" class="box box10" alt="Sample Photo"> -->
-        <div class="box box1">Box 1</div>
+        <img src="images/26m.jpg" class="box box10" alt="Sample Photo">
+        <!-- <div class="box box1">Box 1</div>
         <div class="box box2">Box 2</div>
         <div class="box box3">Box 3</div>
         <div class="box box4">Box 4</div>
         <div class="box box5">Box 5</div>
-        <div class="box box6">Box 6</div>
+        <div class="box box6">Box 6</div> 
         <div class="box box7">Box 7</div>
         <div class="box box8">Box 8</div>
         <div class="box box9">Box 9</div>
-        <div class="box box10">Box 10</div>
+        <div class="box box10">Box 10</div> -->
     </div>
     </div> 
 </body>
